# Qermit

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  README.md  pyproject.toml  release-config.json  release-please-config.json  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: build_and_test.yml  conventional_commits.yml  deploy_docs.yml  deply_docs.yml  issue-to-project.yml  release.yaml  release_please.yml
docs/: .buildinfo  README.md  build-docs.sh  build_docs.sh  clifford_noise_characterisation.html  clifford_noise_characterisation.rst  coherent_pauli_checks.rst  conf.py  frame_randomisation.html  frame_randomisation.rst  genindex.html  index.html  index.md  index.rst  leakage_detection.md  leakage_detection.rst  measurement_reduction.html  measurement_reduction.rst  mitex.html  mitex.rst  mitres.html  mitres.rst  mittask.html  mittask.rst  noise_model.rst  objects.inv  postselection.md  postselection.rst  probabilistic_error_cancellation.html  probabilistic_error_cancellation.rst  requirements.txt  search.html  searchindex.js  spam.html  spam.rst  spectral_filtering.html  spectral_filtering.rst  taskgraph.html  taskgraph.rst  tutorial.md  (+4 more)
docs/.doctrees/: clifford_noise_characterisation.doctree  environment.pickle  frame_randomisation.doctree  index.doctree  measurement_reduction.doctree  mitex.doctree  mitres.doctree  mittask.doctree  probabilistic_error_cancellation.doctree  spam.doctree  spectral_filtering.doctree  taskgraph.doctree  utils.doctree  zero_noise_extrapolation.doctree
docs/_sources/: frame_randomisation.rst.txt  index.rst.txt  mitex.rst.txt  mitres.rst.txt  probabilistic_error_cancellation.rst.txt  zero_noise_extrapolation.rst.txt
docs/_static/: nav-config.js
docs/manual/: .buildinfo  genindex.html  index.html  index.rst  manual_index.rst  manual_intro.html  manual_mitex.html  manual_mitex.rst  manual_mitres.html  manual_mitres.rst  objects.inv  search.html  searchindex.js
docs/manual/.doctrees/: environment.pickle  index.doctree  manual_intro.doctree  manual_mitex.doctree  manual_mitres.doctree
docs/manual/_sources/: index.rst.txt  manual_intro.rst.txt  manual_mitex.rst.txt  manual_mitres.rst.txt
docs_src/: build_docs.sh  clifford_noise_characterisation.rst  conf.py  index.rst  leakage_detection.rst  mitex.rst  mitres.rst  requirements.txt  spam.rst  zero_noise_extrapolation.rst
manual/: build_manual.sh  conf.py  index-rst-template  manual_mitex.rst  manual_mitres.rst
qermit/: __init__.py
qermit/clifford_noise_characterisation/: __init__.py  ccl.py  cdr_post.py  dfsc.py
qermit/coherent_pauli_checks/: __init__.py  box_clifford_subcircuits.py  clifford_detect.py  coherent_pauli_checks_mitres.py  monochromatic_convex_subdag.py  pauli_sampler.py  post_select_manager.py  stabiliser.py  utils.py
qermit/frame_randomisation/: __init__.py  frame_randomisation.py  h_series_randomisation.py  qermit_rus.wasm
qermit/leakage_detection/: __init__.py  leakage_detection.py
qermit/mock_backend/: __init__.py  error_sampler.py  mock_quantinuum_backend.py  noise_model.py  noisy_aer_backend.py  pauli_error_transpile.py  stabiliser.py  transpiler_backend.py
qermit/noise_model/: __init__.py  error_sampler.py  mock_quantinuum_backend.py  noise_model.py  noisy_aer_backend.py  pauli_error_transpile.py  qermit_pauli.py  stabiliser.py  transpiler_backend.py
qermit/postselection/: __init__.py  postselect_manager.py  postselect_mitres.py  postselection.py
qermit/probabilistic_error_cancellation/: __init__.py  cliff_circuit_gen.py  pec_learning_based.py  pec_noise_model.py
qermit/spam/: __init__.py  full_spam_correction.py  full_transition_tomography.py  partial_spam_correction.py  spam_mitres.py
qermit/spectral_filtering/: __init__.py  characterisation_cache.py  results_cache.py  signal_filter.py  spectral_filtering.py
qermit/taskgraph/: __init__.py  graphviz.py  measurement_reduction.py  mitex.py  mitres.py  mittask.py  task_graph.py  utils.py
qermit/zero_noise_extrapolation/: __init__.py  zne.py
qermit_rus/: Cargo.toml
qermit_rus/src/: lib.rs
tests/: ccl_test.py  cdr_test.py  coherent_pauli_checks_test.py  dfsc_test.py  frame_randomisation_test.py  full_spam_test.py  leakage_detection_test.py  leakage_gadget_test.py  measurement_reduction_test.py  mitex_test.py  mitres_test.py  noise_model_test.py  partial_spam_test.py  pec_test.py  postselection_test.py  spam_methods_test.py  spectral_filtering_test.py  taskgraph_test.py  test_backends.py  test_requirements.txt  tomography_test.py  utils_test.py  zne_test.py
