[build-system]
requires = ["poetry", "poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "qermit"
version = "0.8.0"
description = "Python package for quantum error mitigation."
authors = [
    "Daniel Mills <daniel.mills@quantinuum.com>",
    "Silas Dilkes <silas.dilkes@quantinuum.com>",
    "Cristina Cirstoiu <cristina.cirstoiu@quantinuum.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
matplotlib = ">=3.8,<3.11"
pytket-qiskit = ">=0.66,<0.68"
pytket-quantinuum = { extras = ["pecos"], version = ">=0.41,<0.48"}

pytest = { version = ">=8.1,<8.4", optional = true }
mypy = { version = ">=1.9,<1.16", optional = true }
sphinx = { version = ">=8.1,<8.2", optional = true }
pytest-cov = { version = ">=6.0,<6.2", optional = true }
qiskit-ibm-provider = { version = ">=0.11,<0.12", optional = true }
ruff = { version = ">=0.8,<0.12", optional = true }
furo = { version = ">=2024.8,<2024.9", optional = true }
myst-nb = { version = ">=1.1,<1.3", optional = true }
sphinx-autodoc-typehints = { version = ">=2.5,<3.2", optional = true }
jupyter-sphinx = { version = ">=0.5,<0.6", optional = true}

[tool.poetry.extras]
tests = [
    "pytest",
    "mypy",
    "ruff",
    "pytest-cov",
    "qiskit-ibm-provider",
]
docs = [
    "sphinx",
    "furo",
    "myst-nb",
    "sphinx-autodoc-typehints",
    "jupyter-sphinx"
]

[tool.ruff]
exclude = ["docs/jupyter_execute/"]

[tool.ruff.lint]
select = ["I001"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
